errors.log
2025-10-17 21:28:43,228 [ERROR] Internal Server Error: /news/ C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\utils\log.py
(<class 'django.template.exceptions.TemplateSyntaxError'>, TemplateSyntaxError("Unclosed tag on line 14: 'for'. Looking for one of: empty, endfor."), <traceback object at 0x000002001488CF00>)
Traceback (most recent call last):
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Users\user\PycharmProjects\PythonProject\mmorpg_board\core\views.py", line 17, in news_list
    return render(request, 'core/news_list.html', {'page_obj': page_obj})
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\shortcuts.py", line 25, in render
    content = loader.render_to_string(template_name, context, request, using=using)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\backends\django.py", line 79, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    nodelist = parser.parse()
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\defaulttags.py", line 962, in do_if
    nodelist = parser.parse(("elif", "else", "endif"))
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 518, in parse
    raise self.error(token, e)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 516, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\defaulttags.py", line 862, in do_for
    nodelist_loop = parser.parse(
        (
    ...<2 lines>...
        )
    )
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 523, in parse
    self.unclosed_block_tag(parse_until)
    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\template\base.py", line 590, in unclosed_block_tag
    raise self.error(token, msg)
django.template.exceptions.TemplateSyntaxError: Unclosed tag on line 14: 'for'. Looking for one of: empty, endfor.
2025-10-17 21:28:43,244 [ERROR] "GET /news/ HTTP/1.1" 500 169055 C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\core\servers\basehttp.py
None
2025-10-17 23:51:28,496 [ERROR] Internal Server Error: /news/subscribe/ C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\utils\log.py
(<class 'django.db.utils.OperationalError'>, OperationalError('no such table: core_categorysubscription'), <traceback object at 0x000001E67DA86540>)
Traceback (most recent call last):
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\utils.py", line 105, in _execute
    return self.cursor.execute(sql, params)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\sqlite3\base.py", line 360, in execute
    return super().execute(query, params)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
sqlite3.OperationalError: no such table: core_categorysubscription

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\core\handlers\base.py", line 197, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\contrib\auth\decorators.py", line 59, in _view_wrapper
    return view_func(request, *args, **kwargs)
  File "C:\Users\user\PycharmProjects\PythonProject\mmorpg_board\core\views.py", line 139, in subscribe_category
    CategorySubscription.objects.get_or_create(
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        user=request.user,
        ^^^^^^^^^^^^^^^^^^
        category=form.cleaned_data['category']
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\models\manager.py", line 87, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\models\query.py", line 946, in get_or_create
    return self.get(**kwargs), False
           ~~~~~~~~^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\models\query.py", line 629, in get
    num = len(clone)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\models\query.py", line 366, in __len__
    self._fetch_all()
    ~~~~~~~~~~~~~~~^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\models\query.py", line 1949, in _fetch_all
    self._result_cache = list(self._iterable_class(self))
                         ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\models\query.py", line 91, in __iter__
    results = compiler.execute_sql(
        chunked_fetch=self.chunked_fetch, chunk_size=self.chunk_size
    )
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\models\sql\compiler.py", line 1623, in execute_sql
    cursor.execute(sql, params)
    ~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\utils.py", line 122, in execute
    return super().execute(sql, params)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\utils.py", line 79, in execute
    return self._execute_with_wrappers(
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        sql, params, many=False, executor=self._execute
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\utils.py", line 92, in _execute_with_wrappers
    return executor(sql, params, many, context)
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\utils.py", line 100, in _execute
    with self.db.wrap_database_errors:
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\utils.py", line 91, in __exit__
    raise dj_exc_value.with_traceback(traceback) from exc_value
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\utils.py", line 105, in _execute
    return self.cursor.execute(sql, params)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\db\backends\sqlite3\base.py", line 360, in execute
    return super().execute(query, params)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
django.db.utils.OperationalError: no such table: core_categorysubscription
2025-10-17 23:51:28,508 [ERROR] "POST /news/subscribe/ HTTP/1.1" 500 152082 C:\Users\user\PycharmProjects\PythonProject\.venv\Lib\site-packages\django\core\servers\basehttp.py
None
